Add new cds_ic package

--- a/conda_release/index.html
+++ b/conda_release/index.html
@@ -106,6 +106,13 @@
       <td class="tight"></td>
 <td>X</td><td></td>      <td class="summary">None</td>
     </tr>    <tr>
+      <td class="packagename">cds_ic</td>
+      <td class="version">1.0</td>
+      <td></td>
+      <td></td>
+      <td class="tight"></td>
+<td>X</td><td></td>      <td class="summary">None</td>
+    </tr>    <tr>
       <td class="packagename">confrml</td>
       <td class="version">1.0</td>
       <td></td>
@@ -225,6 +232,6 @@
       <td class="tight"></td>
 <td>X</td><td></td>      <td class="summary">None</td>
     </tr>  </table>
-  <address>Updated: 2019-09-19 13:19:40 +0000 - Files: 21</address>
+  <address>Updated: 2019-09-19 13:43:00 +0000 - Files: 22</address>
 </body>
 </html>
