--- a/conda_release/linux-64/index.html
+++ b/conda_release/linux-64/index.html
@@ -55,27 +55,27 @@
     <tr>
       <td><a href="repodata.json" alt="repodata.json">repodata.json</a></td>
       <td class="s">8 KB</td>
-      <td>2019-09-19 13:19:39 +0000</td>
-      <td>adfea6b2e91aa16bc1214d6321fbed896d759de14277467aabdb2a0caaf2bb36</td>
-      <td>175a05b32dc48027a5e32e045fdd5bd3</td>
+      <td>2019-09-19 13:42:59 +0000</td>
+      <td>58c66b38a6f62df307aabb22b47beed2b0b58af65160f38d7a069483b8bee173</td>
+      <td>eb929a8405e0e4a630481aa777834c22</td>
     </tr>    <tr>
       <td><a href="repodata.json.bz2" alt="repodata.json.bz2">repodata.json.bz2</a></td>
       <td class="s">2 KB</td>
-      <td>2019-09-19 13:19:39 +0000</td>
-      <td>55437f14940f5ad559fb82cc2f8dd875bc2a9e2b1f1a79d9714f054e3c0f4323</td>
-      <td>c37f82a8aa86ff12a55d3d817ec46bad</td>
+      <td>2019-09-19 13:42:59 +0000</td>
+      <td>78826bf8bd6124f2ac6a1d54bdac2a25636a4416ca72f587701fc62019cbb267</td>
+      <td>b4c020fd4e24b714d53aa4e64feb8ca6</td>
     </tr>    <tr>
       <td><a href="repodata_from_packages.json" alt="repodata_from_packages.json">repodata_from_packages.json</a></td>
       <td class="s">8 KB</td>
-      <td>2019-09-19 13:19:39 +0000</td>
-      <td>adfea6b2e91aa16bc1214d6321fbed896d759de14277467aabdb2a0caaf2bb36</td>
-      <td>175a05b32dc48027a5e32e045fdd5bd3</td>
+      <td>2019-09-19 13:42:59 +0000</td>
+      <td>58c66b38a6f62df307aabb22b47beed2b0b58af65160f38d7a069483b8bee173</td>
+      <td>eb929a8405e0e4a630481aa777834c22</td>
     </tr>    <tr>
       <td><a href="repodata_from_packages.json.bz2" alt="repodata_from_packages.json.bz2">repodata_from_packages.json.bz2</a></td>
       <td class="s">2 KB</td>
-      <td>2019-09-19 13:19:39 +0000</td>
-      <td>55437f14940f5ad559fb82cc2f8dd875bc2a9e2b1f1a79d9714f054e3c0f4323</td>
-      <td>c37f82a8aa86ff12a55d3d817ec46bad</td>
+      <td>2019-09-19 13:42:59 +0000</td>
+      <td>78826bf8bd6124f2ac6a1d54bdac2a25636a4416ca72f587701fc62019cbb267</td>
+      <td>b4c020fd4e24b714d53aa4e64feb8ca6</td>
     </tr>    <tr>
       <td><a href="agnisys-1.0-0.tar.bz2" alt="agnisys-1.0-0.tar.bz2">agnisys-1.0-0.tar.bz2</a></td>
       <td class="s">2 KB</td>
@@ -100,6 +100,12 @@
       <td>2019-09-19 13:17:35 +0000</td>
       <td>73584f4243fbfae6aa50e889e6cbbeaf0bf63a571d15a6ed9ff18017e9c39f1f</td>
       <td>a7260f3a6c85606cdaccdacb2a52ddde</td>
+    </tr>    <tr>
+      <td><a href="cds_ic-1.0-0.tar.bz2" alt="cds_ic-1.0-0.tar.bz2">cds_ic-1.0-0.tar.bz2</a></td>
+      <td class="s">2 KB</td>
+      <td>2019-09-19 13:42:59 +0000</td>
+      <td>055b9100b5b6f4dcb7c38c433d7b193018926aabb4438c6f5caf503f21636f0b</td>
+      <td>149b3dc16d485b13d1f49779c584e0ed</td>
     </tr>    <tr>
       <td><a href="confrml-1.0-0.tar.bz2" alt="confrml-1.0-0.tar.bz2">confrml-1.0-0.tar.bz2</a></td>
       <td class="s">2 KB</td>
@@ -203,6 +209,6 @@
       <td>424c5a5be2c8d698ad534b44d2918790977e0a87701f6e5e1b2288ce3400f2a9</td>
       <td>0e0e6999200f924ae3fb4fb1eb74cb32</td>
     </tr>  </table>
-  <address>Updated: 2019-09-19 13:19:40 +0000 - Files: 21</address>
+  <address>Updated: 2019-09-19 13:43:00 +0000 - Files: 22</address>
 </body>
 </html>
